# OptimLight

./: .gitignore  AUTHORS  CMakeLists.txt  Readme.md
save/: Makefile  cg  cg.h  main.cpp
src/: CMakeLists.txt  optimizer.h  optimizer.hpp  optimlight.hpp  problem.cpp  problem.hpp  types.cpp  types.h  types.hpp
src/manifolds/: CMakeLists.txt  array.cpp  array.hpp  euclidean.cpp  euclidean.hpp  manifold.cpp  manifold.hpp  product_manifold.cpp  product_manifold.hpp  stacked_manifold.cpp  stacked_manifold.hpp  stiefel.cpp  stiefel.hpp
